# onion-cli

./: .gitignore  pyproject.toml
onion/: main.py
onion/actions/: create_mongo_collection.py  create_mongo_service.py  create_repo.py  create_repo_with_mongo_collection.py  create_router.py  create_router_with_module.py  create_router_with_repo_with_mongo.py
onion/actions/dart/: create_cubit.py  create_datasource.py  create_flutter_module.py  create_model.py  create_repository.py
onion/actions/project/: copy_fastapi_full_project.py  copy_fastapi_project.py  copy_flutter_project.py
onion/fixed_files/dart/services/: dio_http_service.dart  hive_service.dart
onion/mediators/: mediator.py
onion/project_base/fast_api_app/: pyproject.toml
onion/project_base/fast_api_app/app/: .env.example
onion/templates/: controller_template.py  datasource_template.py  model_template.py  module_init_file_template.py  mongo_collection_template.py  mongo_service_template.py  repository_template.py  router_template.py  version_router_template.py
onion/templates/dart/: datasource_template.py  model_template.py  read_cubit_template.py  repository_template.py  write_cubit_template.py
onion/utils/: dir_utils.py  file_utils.py  string_utils.py
onion/utils/dart/: barrelfile_util.py
