[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onion"
version = "0.1.5"
description = "A CLI tool for generate code in onion template"
dependencies = [
    "typer>=0.16.0", 
    "toml>=0.10.2",
]

[project.scripts]
onion = "onion.main:app"