[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onion"
version = "0.2.0"
description = "A CLI tool for generate code in onion template"
dependencies = [
    "typer>=0.16.0", 
    "toml>=0.10.2",
]

[project.scripts]
onion = "onion.main:app"

[dependency-groups]
dev = [
    "ty>=0.0.31",
]

[tool.ty.src]
exclude = ["onion/project_base"]