[project]
name = "fastapi-onion-template"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.0",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "onion",
    "pytest-asyncio>=1.3.0",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
    "ty>=0.0.31",
]

[tool.uv.sources]
onion = { git = "https://github.com/NathanDraco22/onion-cli.git" }
